<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fragment_background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_action_bar"
        android:layout_alignParentTop="true"
        android:background="@color/fragment_background_color"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_change_pass"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textStyle="bold" android:background="@color/text_color_menu_active"/>
        <asia.ienter.matching.utils.custom.RippleView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="&lt;-"
            android:id="@+id/layoutBackActivity"
            android:background="@color/transparent" android:clickable="true"
            android:gravity="center">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:id="@+id/imgBackActivity"
                android:src="@drawable/ic_arrow_back_white"
                />
        </asia.ienter.matching.utils.custom.RippleView>


    </RelativeLayout>

    <TextView
        android:id="@+id/tvDescriptionPassword"
        android:layout_below="@+id/actionBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/black"
        android:text="@string/txt_password_description"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edtOldPass"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@+id/tvDescriptionPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_old_password"
        android:inputType="textPassword"
        android:gravity="center"
        android:textSize="18sp"
        app:met_baseColor="@color/black"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="20"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edtNewPass"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@+id/edtOldPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_new_password"
        android:inputType="textPassword"
        android:gravity="center"
        android:textSize="18sp"
        app:met_baseColor="@color/black"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="20"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edtNewPass2"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@+id/edtNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_new_password2"
        android:inputType="textPassword"
        android:gravity="center"
        android:textSize="18sp"
        app:met_baseColor="@color/black"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="20"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true" />
    <Button
        android:id="@+id/btnChangePass"
        android:layout_below="@+id/edtNewPass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:text="@string/txt_change_pass"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>
</RelativeLayout>