<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_advance_search"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="12dp"
            android:src="@mipmap/btn_back_accent"/>
    </RelativeLayout>


    <LinearLayout
    android:paddingTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtRange"/>

    <TextView

        android:paddingBottom="10dp"
        android:gravity="center"
        android:id="@+id/txtRange"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Your Range: 0km"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="0km"
            android:textColor="@color/black"
            android:gravity="center"/>
        <SeekBar
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:max="50"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"/>
        <TextView
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="50km"
            android:gravity="center"/>
    </LinearLayout>
    <TextView
        android:paddingTop="20dp"
        android:paddingBottom="10dp"

        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/txt_search_accuracy"/>I
    <Button
        android:id="@+id/btnGoToProfile"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_goToProfile"
        />


</LinearLayout>


</LinearLayout>
