<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white">
    <android.support.v7.widget.CardView
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Card.NoMargins.NoClick">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:orientation="horizontal"
            android:background="@color/text_color_menu_active"
            android:gravity="center">
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="&lt;-"
                android:id="@+id/btnBack" android:layout_margin="10dp"
                android:background="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Cam kết án toàn cuộc gặp gỡ"
                android:layout_weight="1" android:gravity="center"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="ST"
                android:id="@+id/btnSetting" android:layout_margin="10dp"
                android:visibility="invisible"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:background="@color/white">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent" android:background="@color/white">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY" android:src="@drawable/ic_cam_ket_1" android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_cam_ket_1"
                android:layout_gravity="center"
                android:layout_margin="16dp" android:textSize="16sp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" android:src="@drawable/ic_cam_ket_2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_cam_ket_2"
                android:layout_gravity="center"
                android:layout_margin="16dp" android:textSize="16sp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" android:src="@drawable/ic_cam_ket_3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_cam_ket_3"
                android:layout_gravity="center"
                android:layout_margin="16dp" android:textSize="16sp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" android:src="@drawable/ic_cam_ket_4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_cam_ket_4"
                android:layout_gravity="center"
                android:layout_margin="16dp" android:textSize="16sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
